# OpenArchive

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Cargo.toml  Dockerfile  Makefile  README.md  compose.yaml
.githooks/: pre-commit  pre-push
.github/workflows/: ci.yml
docker/: entrypoint.sh  oracle-runtime-base.Dockerfile
docs/: 01-product-overview.md  02-architecture.md  03-data-model.md  04-adb-integration.md  05-roadmap.md  06-brain-overview.md  07-artifact-model.md  08-provenance-model.md  09-derived-metadata-model.md  10-context-pack-model.md  11-first-vertical-slice-plan.md  12-first-slice-schema.md  13-adb-bootstrap.md  15-AI-SYLLABUS.md  16-error-handling.md  17-eval-baselines.md  architecture.md  domain-model.md  engineering-rules.md  roadmap.md  sqlite-qdrant-probes.md
scripts/: bootstrap_open_archive_test_user.sh  bootstrap_open_archive_user.sh  install_qdrant.sh  pipeline_status.sh  reset_open_archive_test_user.sh  reset_open_archive_user.sh  run_sqlcl_admin.sh
sql/admin/: bootstrap_open_archive_user.sql  reset_open_archive_bootstrap.sql
sql/migrations/: V001__first_slice_schema.sql
src/: bootstrap.rs  config.rs  db.rs  embedding.rs  enrichment_worker.rs  error.rs  extraction_chunking.rs  import_service.rs  lib.rs  main.rs  migrations.rs  object_store.rs  postgres_db.rs  qdrant_sidecar.rs  rate_limiter.rs  secrets.rs  shutdown.rs  sqlite_db.rs  stage_poller.rs  vector.rs
src/app/: artifact_detail.rs  artifacts.rs  context_pack.rs  imports.rs  mod.rs  retrieval.rs  review.rs  search.rs  writeback.rs
src/cli/: doctor.rs  import.rs  init.rs  mod.rs  query.rs  status.rs
src/config/: embedding.rs  env.rs  file.rs  http.rs  inference.rs  mod.rs  object_store.rs  pipeline.rs  relational.rs  tests.rs  vector.rs
src/domain/: mod.rs  types.rs
src/embeddings/: mod.rs
src/enrichment_worker/: context.rs  embedding.rs  extract.rs  jobs.rs  mod.rs  pipeline.rs  reconcile.rs  tests.rs
src/http/: error.rs  mod.rs  (+4 more)
tests/: enrichment_worker.rs  eval_fixtures.rs  oracle_derived_metadata.rs  oracle_enrichment_execution.rs  oracle_enrichment_job.rs  oracle_import_write.rs  postgres_derived_metadata.rs  postgres_enrichment_execution.rs  postgres_enrichment_job.rs  postgres_import_write.rs  postgres_retrieval_read_models.rs  postgres_writeback.rs  sqlite_fts5_search.rs  sqlite_get_related_repro.rs
tracker/: README.md  V1_RELEASE.md  index.yaml
(+248 files in other folders)
