[package]
name = "open_archive"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
chrono = { version = "0.4", default-features = false, features = ["alloc", "serde", "std"] }
clap = { version = "4.5", features = ["derive"] }
env_logger = "0.11"
log = "0.4"
oracle = "0.6"
postgres = { version = "0.19", features = ["with-chrono-0_4"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
thiserror = "2.0"
tiny_http = "0.12"
ctrlc = "3.4"

[dev-dependencies]
mockall = "0.12"
