[package]
name = "open_archive"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
chrono = { version = "0.4", default-features = false, features = ["alloc", "serde", "std"] }
clap = { version = "4.5", features = ["derive"] }
dotenvy = "0.15"
env_logger = "0.11"
httpdate = "1.0"
log = "0.4"
oracle = { version = "0.6", features = ["chrono"] }
postgres = { version = "0.19", features = ["with-chrono-0_4"] }
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "multipart", "rustls-tls"] }
rand = "0.8"
rusqlite = { version = "0.32", features = ["bundled"] }
rusty-s3 = { version = "0.8", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
sha2 = "0.10"
thiserror = "2.0"
tiny_http = "0.12"
rpassword = "7"
ctrlc = "3.4"
dirs = "5.0"
flate2 = "1.1"
tar = "0.4"
toml = "0.8"
url = "2.5"
zip = { version = "2.2", default-features = false, features = ["deflate"] }
keyring = "3"
[dev-dependencies]
mockall = "0.12"
tempfile = "3.0"
